--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,30 +1,30 @@
 /* write your override styles here */
 
-
-.tag-1 {
+#wall .tag-1 {
     display: none;
 }
 
-.tag-2 {
-    display: none;
-    }
-
-#tag-3 {
+#wall #tag-2 {
     display: none;
 }
 
-#tag-4 {
+div#wall #tag-3.slick {
     display: none;
 }
 
-#tag-5 {
+#wall #tag-4 {
     display: none;
 }
 
-#tag-6 {
+div#wall .parent #tag-5.slick {
     display: none;
 }
 
-#tag-7 {
+div#wall div.parent div:last-child div#tag-6{
+    display: none;
+}
+
+body div#wall div.parent div > #tag-7.slick
+{
     display: none;
 }
