--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -12,11 +12,11 @@ div#wall #tag-3.slick {
     display: none;
 }
 
-#wall #tag-4 {
+#wall div#tag-4 {
     display: none;
 }
 
-div#wall .parent #tag-5.slick {
+div#wall div.parent #tag-5.slick {
     display: none;
 }
 
