--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,26 +1,26 @@
 /* write your override styles here */
 
-div#wall .tag-1 {
+body div#wall .tag-1 {
     display: none;
 }
 
-div#wall #tag-2 {
+body div#wall #tag-2 {
     display: none;
 }
 
-div#wall #tag-3.slick {
+body div#wall #tag-3.slick {
     display: none;
 }
 
-div#wall div#tag-4 {
+body div#wall div#tag-4 {
     display: none;
 }
 
-div#wall div.parent #tag-5.slick {
+body div#wall div.parent #tag-5.slick {
     display: none;
 }
 
-div#wall div.parent div:last-child div#tag-6{
+body div#wall div.parent div:last-child div#tag-6{
     display: none;
 }
 
